force-app/main/default/objects/JBCXM__Survey__c/JBCXM__Survey__c.object-meta.xml
<CustomObject>
    <description>This is used to survey  main attributes</description>
    <label>Survey</label>
    <nameField>
        <displayFormat>Su-{00000}</displayFormat>
        <label>Survey</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>