force-app/main/default/objects/JBCXM__Survey__c/fields/JBCXM__AnonymousTokenId__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__AnonymousTokenId__c</fullName>
    <label>Anonymous Token</label>
    <length>40</length>
    <type>Text</type>
</CustomField>