force-app/main/default/objects/JBCXM__Survey__c/fields/JBCXM__AnonymousType__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__AnonymousType__c</fullName>
    <label>Anonymous Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Partial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>