force-app/main/default/objects/JBCXM__Survey__c/fields/JBCXM__AssociatedObjectFieldLabel__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__AssociatedObjectFieldLabel__c</fullName>
    <label>Associated object field label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>