force-app/main/default/objects/JBCXM__Survey__c/fields/JBCXM__AssociatedObjectFieldName__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__AssociatedObjectFieldName__c</fullName>
    <label>Associated object field API name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>