force-app/main/default/objects/JBCXM__Survey__c/fields/JBCXM__AssociatedObjectLabel__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__AssociatedObjectLabel__c</fullName>
    <label>Associated object label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>