force-app/main/default/objects/JBCXM__Survey__c/fields/JBCXM__AssociatedObjectName__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__AssociatedObjectName__c</fullName>
    <label>Associated object API name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>