force-app/main/default/objects/JBCXM__Survey__c/fields/JBCXM__AssociatedObjectRelatedField__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__AssociatedObjectRelatedField__c</fullName>
    <label>Associated object storage field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>