force-app/main/default/objects/JBCXM__Survey__c/fields/JBCXM__AssociatedObjectSource__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__AssociatedObjectSource__c</fullName>
    <label>Associated object source</label>
    <length>10</length>
    <type>Text</type>
</CustomField>