force-app/main/default/objects/JBCXM__Survey__c/fields/JBCXM__CampaignId__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__CampaignId__c</fullName>
    <description>This field is used to store the campaign Id for external services eg : Marketo</description>
    <label>CampaignId</label>
    <length>25</length>
    <type>Text</type>
</CustomField>