force-app/main/default/objects/JBCXM__Survey__c/fields/JBCXM__CustomerDistributionCount__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__CustomerDistributionCount__c</fullName>
    <label>Customer Distribution Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>