force-app/main/default/objects/JBCXM__Survey__c/fields/JBCXM__CustomerReponsecount__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__CustomerReponsecount__c</fullName>
    <label>Customer Reponse count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>