force-app/main/default/objects/JBCXM__Survey__c/fields/JBCXM__EmailBody__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__EmailBody__c</fullName>
    <label>Email Body</label>
    <length>8000</length>
    <type>LongTextArea</type>
</CustomField>