force-app/main/default/objects/JBCXM__Survey__c/fields/JBCXM__EmailOpenURL__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__EmailOpenURL__c</fullName>
    <label>EmailOpenURL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>