force-app/main/default/objects/JBCXM__Survey__c/fields/JBCXM__EmailService__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__EmailService__c</fullName>
    <label>EmailService</label>
    <length>25</length>
    <type>Text</type>
</CustomField>