force-app/main/default/objects/JBCXM__Survey__c/fields/JBCXM__EmailTemplate__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__EmailTemplate__c</fullName>
    <description>This represent the Email Template.</description>
    <label>Email Template</label>
    <length>25</length>
    <type>Text</type>
</CustomField>