force-app/main/default/objects/JBCXM__Survey__c/fields/JBCXM__EndDate__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__EndDate__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>