force-app/main/default/objects/JBCXM__Survey__c/fields/JBCXM__ExtTitle__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__ExtTitle__c</fullName>
    <label>Enternal Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>