force-app/main/default/objects/JBCXM__Survey__c/fields/JBCXM__FooterMessge__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__FooterMessge__c</fullName>
    <label>FooterMessge</label>
    <length>400</length>
    <type>LongTextArea</type>
</CustomField>