force-app/main/default/objects/JBCXM__Survey__c/fields/JBCXM__HasAssociatedObject__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__HasAssociatedObject__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Associated object</label>
    <type>Checkbox</type>
</CustomField>