force-app/main/default/objects/JBCXM__Survey__c/fields/JBCXM__HeaderLogo__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__HeaderLogo__c</fullName>
    <label>HeaderLogo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>