force-app/main/default/objects/JBCXM__Survey__c/fields/JBCXM__HidePublishDate__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__HidePublishDate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Publish Date</label>
    <type>Checkbox</type>
</CustomField>