force-app/main/default/objects/JBCXM__Survey__c/fields/JBCXM__HonourDateRestrictions__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__HonourDateRestrictions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether to honour start date and end date</description>
    <label>Honour Date Restrictions</label>
    <type>Checkbox</type>
</CustomField>