force-app/main/default/objects/JBCXM__Survey__c/fields/JBCXM__IsAnonymous__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__IsAnonymous__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Anonymous</label>
    <type>Checkbox</type>
</CustomField>