force-app/main/default/objects/JBCXM__Survey__c/fields/JBCXM__IsExpired__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__IsExpired__c</fullName>
    <formula>IF(OR(ISPICKVAL(JBCXM__Status__c,&quot;Closed&quot;),(AND(IF(JBCXM__EndDate__c&lt;TODAY(),true, false),JBCXM__HonourDateRestrictions__c==true))), true, false)</formula>
    <label>Is Expired</label>
    <type>Checkbox</type>
</CustomField>