force-app/main/default/objects/JBCXM__Survey__c/fields/JBCXM__IsLib__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__IsLib__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Library</label>
    <type>Checkbox</type>
</CustomField>