force-app/main/default/objects/JBCXM__Survey__c/fields/JBCXM__IsPublished__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__IsPublished__c</fullName>
    <formula>IF(AND(NOT(ISBLANK(JBCXM__PublishDate__c)), JBCXM__IsExpired__c==false), true, false)</formula>
    <label>Is Published</label>
    <type>Checkbox</type>
</CustomField>