force-app/main/default/objects/JBCXM__Survey__c/fields/JBCXM__IsTranslation__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__IsTranslation__c</fullName>
    <formula>NOT(ISBLANK(JBCXM__TranslationFor__c))</formula>
    <label>Is Survey Translation</label>
    <type>Checkbox</type>
</CustomField>