force-app/main/default/objects/JBCXM__Survey__c/fields/JBCXM__LinkExpireDays__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__LinkExpireDays__c</fullName>
    <description>Number of days survey link will be valid. Expiry will be calculated based on survey sent date.</description>
    <label>Survey Link Expire Days</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>