force-app/main/default/objects/JBCXM__Survey__c/fields/JBCXM__Owner__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Owner__c</fullName>
    <label>Owner</label>
    <length>100</length>
    <type>Text</type>
</CustomField>