force-app/main/default/objects/JBCXM__Survey__c/fields/JBCXM__ParticipantMapping__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__ParticipantMapping__c</fullName>
    <label>ParticipantMapping</label>
    <length>8000</length>
    <type>LongTextArea</type>
</CustomField>