force-app/main/default/objects/JBCXM__Survey__c/fields/JBCXM__ParticipantRules__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__ParticipantRules__c</fullName>
    <label>Participant Rules</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>