force-app/main/default/objects/JBCXM__Survey__c/fields/JBCXM__PublishDate__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__PublishDate__c</fullName>
    <label>Publish Date</label>
    <type>Date</type>
</CustomField>