force-app/main/default/objects/JBCXM__Survey__c/fields/JBCXM__PublishedURL__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__PublishedURL__c</fullName>
    <description>This represents the site URL to publish the survey.</description>
    <label>Published URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>