force-app/main/default/objects/JBCXM__Survey__c/fields/JBCXM__StartDate__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__StartDate__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>