force-app/main/default/objects/JBCXM__Survey__c/fields/JBCXM__Status__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Design</fullName>
            </value>
            <value>
                <fullName>Publish</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>ReOpened</fullName>
            </value>
            <value>
                <fullName>Locked</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>