force-app/main/default/objects/JBCXM__Survey__c/fields/JBCXM__ThankyouCustom__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__ThankyouCustom__c</fullName>
    <description>Enter custom URL or Custom page</description>
    <inlineHelpText>Enter custom URL or Custom page</inlineHelpText>
    <label>Thankyou Custom</label>
    <length>255</length>
    <type>Text</type>
</CustomField>