force-app/main/default/objects/JBCXM__Survey__c/fields/JBCXM__ThankyouMessage__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__ThankyouMessage__c</fullName>
    <label>Thank you Message</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>