force-app/main/default/objects/JBCXM__Survey__c/fields/JBCXM__TranslationFor__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__TranslationFor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transation for</label>
    <referenceTo>JBCXM__Survey__c</referenceTo>
    <relationshipLabel>Translation For</relationshipLabel>
    <relationshipName>SurveyTranslations</relationshipName>
    <type>Lookup</type>
</CustomField>