force-app/main/default/objects/JBCXM__Survey__c/fields/JBCXM__UserResponseCount__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__UserResponseCount__c</fullName>
    <label>User Response Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>