force-app/main/default/objects/JBCXM__Survey__c/fields/JBCXM__UsersSentCount__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__UsersSentCount__c</fullName>
    <label>Users Sent Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>