force-app/main/default/objects/JBCXM__Survey__c/fields/JBCXM__WelcomeMessage__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__WelcomeMessage__c</fullName>
    <label>Welcome Message</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>